// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Color constants color stops should match snapshot 1`] = `
[
  0,
  50,
  100,
  200,
  300,
  400,
  500,
  600,
  700,
  800,
  900,
  950,
  1000,
]
`;

exports[`Color constants theme color stops should match snapshot 1`] = `
[
  50,
  100,
  200,
  300,
  400,
  500,
  600,
  700,
  800,
  900,
  950,
]
`;
